Bug 31924 - gcc accepts invalid suffixes for decimal float constants
Summary: gcc accepts invalid suffixes for decimal float constants
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c (show other bugs)
Version: 4.2.0
: P3 normal
Target Milestone: 4.3.0
Assignee: Janis Johnson
URL:
Keywords: accepts-invalid
Depends on:
Blocks:
 
Reported: 2007-05-14 21:50 UTC by Janis Johnson
Modified: 2007-06-24 03:49 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janis Johnson 2007-05-14 21:50:29 UTC
The change to the C preprocessor to recognize "df", "dd", and "dl" as suffixes for decimal floating point constants also allows "fd" and "ld"; a check for that assumed that the the letters are examined from left to right, but they are examined from right to left.  There are no errors for the following:

  double a = 1.ld;
  double b = 1.fd;

I'm testing a fix, but wanted a PR to reference for a patch to the 4.2 branch.
Comment 1 Janis Johnson 2007-05-15 00:43:31 UTC
Subject: Bug 31924

Author: janis
Date: Mon May 14 23:43:07 2007
New Revision: 124730

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=124730
Log:
libcpp/
        PR c/31924
        * expr.c (interpret_float_suffix): Check for invalid suffix.
gcc/testsuite/
        PR c/31924
        * gcc.dg/fltconst-1.c: New test.

Added:
    trunk/gcc/testsuite/gcc.dg/fltconst-1.c
Modified:
    trunk/gcc/testsuite/ChangeLog
    trunk/libcpp/ChangeLog
    trunk/libcpp/expr.c

Comment 2 Janis Johnson 2007-05-21 22:17:41 UTC
Subject: Bug 31924

Author: janis
Date: Mon May 21 21:17:23 2007
New Revision: 124913

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=124913
Log:
libcpp/
	PR c/31924
        * expr.c (interpret_float_suffix): Check for invalid suffix.
gcc/testsuite/
	PR c/31924
        * gcc.dg/fltconst-1.c: New test.

Modified:
    branches/ibm/gcc-4_1-branch/gcc/testsuite/ChangeLog
    branches/ibm/gcc-4_1-branch/libcpp/ChangeLog
    branches/ibm/gcc-4_1-branch/libcpp/expr.c

Comment 3 Andrew Pinski 2007-06-24 03:49:00 UTC
Fixed.